# currency-decision-assistant

./: .gitignore  AGENTS.md  LICENSE  README.md  package.json  requirements.txt  vercel.json
api/: index.py
apps/api/: README.md  pyproject.toml
apps/api/app/: main.py  schemas.py
apps/api/app/api/: routes.py
apps/api/app/core/: config.py
apps/api/app/services/: bands.py  bccr_sdde.py  cache.py  catalog.py  dashboard.py  entities.py  history.py  market.py  market_data.py  recommendations.py  snapshot_view.py  summary.py  ventanilla.py
apps/web/: README.md  index.html  package-lock.json  package.json
apps/web/public/: site.webmanifest
apps/web/src/: main.tsx
apps/web/src/app/: App.tsx  i18n.ts  types.ts
apps/web/src/app/api/: client.ts
apps/web/src/app/components/: EntitiesTable.tsx  Header.tsx  InsightsSection.tsx  MarketChart.tsx  RecommendationCircle.tsx  UserInputSection.tsx
apps/web/src/app/hooks/: useDashboardData.ts
apps/web/src/styles/: theme.css
